deploy-http.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-shuuji3
  labels:
    k8s-app: http-shuuji3
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: http-shuuji3
  template:
    metadata:
      labels:
        k8s-app: http-shuuji3
    spec:
      containers:
        - name: mypod
          image: httpd:alpine
          resources:
            limits:
              memory: 1.5Gi
              cpu: 1
            requests:
              memory: 0.5Gi
              cpu: 0.1
          volumeMounts:
            - name: dataroot
              mountPath: /usr/local/apache2/htdocs
      volumes:
        - name: dataroot
          emptyDir: {}
