deploy-strg-shuuji3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strg-shuuji3
  labels:
    k8s-app: strg-shuuji3
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: strg-shuuji3
  template:
    metadata:
      labels:
        k8s-app: strg-shuuji3
    spec:
      containers:
        - name: mypod
          image: alpine
          resources:
            limits:
              memory: 500Mi
              cpu: 200m
            requests:
              memory: 100Mi
              cpu: 100m
          command: ["sh", "-c", "apk add dumb-init && dumb-init -- sleep 100000"]
          volumeMounts:
            - name: mydata
              mountPath: /mnt/myscratch
      volumes:
        - name: mydata
          emptyDir: {}
