off-limits-suncavepod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: suncavepod-shuuji3
spec:
  nodeSelector:
    nautilus.io/latency: suncave-b
  tolerations:
    - effect: NoSchedule
      key: nautilus.io/suncave
      operator: Exists
  containers:
    - name: mypod
      image: nvidia/cuda:10.0-runtime-centos7
      resources:
        limits:
          memory: 1.5Gi
          cpu: 1
          nvidia.com/gpu: 1
        requests:
          memory: 500Mi
          cpu: 100m
          nvidia.com/gpu: 1
      command: ["sh", "-c", "sleep infinity"]
