pod-ceph-rbd.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-shuuji3
spec:
  containers:
    - name: mypod
      image: centos:centos7
      command: ["sh", "-c", "sleep infinity"]
      resources:
        limits:
          memory: 100Mi
          cpu: 100m
        requests:
          memory: 100Mi
          cpu: 100m
      volumeMounts:
        - mountPath: /example-vol
          name: example-vol
  volumes:
    - name: example-vol
      persistentVolumeClaim:
        claimName: vol-shuuji3
