simple-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-shuuji3
  labels:
    k8s-app: dep-shuuji3
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: dep-shuuji3
  template:
    metadata:
      labels:
        k8s-app: dep-shuuji3
    spec:
      containers:
        - name: mypod
          image: centos:centos7
          resources:
            limits:
              memory: 1.5Gi
              cpu: 1
            requests:
              memory: 0.5Gi
              cpu: 0.1
          command: ["sh", "-c", "sleep infinity"]
