simple-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-shuuji3
spec:
  containers:
  - name: mypod
    image: centos:centos7
    resources:
      limits:
        memory: 100Mi
        cpu: 100m
      requests:
        memory: 100Mi
        cpu: 100m
    command: ["sh", "-c", "sleep infinity"]
